# adventure2019

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  patch.txt  remove.sh  webchat.html
DataFiles/: internalization.json  internationalization.json  mirkwood.json
DataFiles/Characters/: a.json  b.json
DataFiles/Users/: .json  a.json  admin.json  b.json  bill.json  blake.json  bob.json
lib/: CMakeLists.txt
lib/Character/: CMakeLists.txt
lib/Character/include/: Character.h  Spells.h
lib/Character/src/: Character.cpp  Spells.cpp  test_character.cpp
lib/Combat/: CMakeLists.txt
lib/Combat/include/: Combat.h  CombatController.h
lib/Combat/src/: Combat.cpp  CombatController.cpp
lib/CommandHandler/: CMakeLists.txt
lib/CommandHandler/include/: CommandHandler.h  CommandTranslator.h
lib/CommandHandler/src/: CommandHandler.cpp  CommandTranslator.cpp
lib/Commands/: CMakeLists.txt
lib/Commands/include/: CombatCommands.h  Command.h  GameCommands.h  MiniGameCommands.h  PigeonCommand.h  ResetCommand.h  UserCommands.h
lib/Commands/src/: CombatCommands.cpp  Command.cpp  GameCommands.cpp  MiniGameCommands.cpp  PigeonCommand.cpp  ResetCommand.cpp  UserCommands.cpp
lib/Controllers/: CMakeLists.txt  CharacterController.cpp  CharacterController.h
lib/Controllers/include/: CharacterController.h  NPCController.h  ObjectController.h  ResetController.h  SpellController.h
lib/Controllers/src/: CharacterController.cpp  NPCController.cpp  ObjectController.cpp  ResetController.cpp  SpellController.cpp
lib/GameController/: CMakeLists.txt
lib/GameController/include/: GameController.h
lib/GameController/src/: GameController.cpp
lib/GameController/test/: test_commands.cpp
lib/JSON/: CMakeLists.txt  JSONThingy.cpp  JSONThingy.h  main.cpp
lib/MessageDispatcher/: CMakeLists.txt
lib/MessageDispatcher/include/: MessageDispatcher.h
lib/MessageDispatcher/src/: MessageDispatcher.cpp
lib/MiniGame/: CMakeLists.txt
lib/MiniGame/Games/TicTacToe/: CMakeLists.txt
lib/MiniGame/Games/TicTacToe/include/: AI.h  Board.h  Cell.h  Constants.h  TicTacToe.h
lib/MiniGame/Games/TicTacToe/src/: AI.cpp  Board.cpp  TicTacToe.cpp
lib/MiniGame/include/: MiniGameController.h
lib/MiniGame/src/: MiniGameController.cpp
lib/Model/: Character.cpp  Character.h  Equip.cpp  Equip.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemInfo.cpp  ItemInfo.h  ItemStats.cpp  ItemStats.h
lib/NPC/: CMakeLists.txt
lib/NPC/include/: NPC.h
lib/NPC/src/: NPC.cpp
lib/Object/: CMakeLists.txt
lib/Object/include/: Extra.h  Inventory.h  Object.h
lib/Object/src/: Extra.cpp  Inventory.cpp  Object.cpp  test_object.cpp
lib/Reset/: CMakeLists.txt
lib/Reset/include/: Reset.h
lib/Reset/src/: Reset.cpp
lib/Scheduler/: CMakeLists.txt
lib/Scheduler/include/: Scheduler.h
lib/Scheduler/src/: Scheduler.cpp
lib/Ultility/: Ultility.cpp  Ultility.h
lib/User/: CMakeLists.txt
lib/User/include/: User.h  UserController.h  UserManager.h
lib/User/src/: User.cpp  UserController.cpp  UserManager.cpp
lib/Utility/: CMakeLists.txt
lib/Utility/include/: AlterSpace.h  CommandUtil.hpp  CommandsListing.h  JSONObjects.h  JSONUser.h  Response.h  ReturnCode.h  ReturnCodes.h  StringLibrary.h  UniqueID.h  Utility.h  pigLatin.h  stringModifier.h
lib/Utility/src/: ReturnCode.cpp  UniqueID.cpp  pigLatin.cpp  stringModifier.cpp
lib/World/: CMakeLists.txt
lib/World/include/: Area.h  Door.h  ExtendedDescription.h  PigeonEXE.h  Room.h  RoomController.h  RoomControllor.h  World.h
lib/World/src/: Area.cpp  Door.cpp  ExtendedDescription.cpp  PigeonEXE.cpp  Room.cpp  RoomController.cpp  RoomControllor.cpp  World.cpp
lib/World/test/: Maze.cpp  RoomControllerTest.cpp  WorldTest.cpp
lib/WorldManager/: CMakeLists.txt
lib/WorldManager/include/: WorldManager.h
lib/WorldManager/src/: WorldManager.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: Server.h
patches/: server.patch
test/: CMakeLists.txt  CharacterTest.cpp
test/lib/: CMakeLists.txt
tools/chatclient/: chatclient.cpp
tools/chatserver/: CMakeLists.txt  chatserver.cpp  chatserver.h
