add_subdirectory(World)
add_subdirectory(Utility)
add_subdirectory(Reset)
add_subdirectory(User)
add_subdirectory(Controllers)
add_subdirectory(Object)
add_subdirectory(Character)
add_subdirectory(CommandHandler)
add_subdirectory(Commands)
add_subdirectory(Scheduler)
add_subdirectory(JSON)
add_subdirectory(NPC)
add_subdirectory(Combat)
add_subdirectory(MiniGame)
